--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ server {
 
   location / {
     rewrite ^/(\?.*)$ /index.php$1 last;
-    rewrite ^/(([a-zA-Z0-9]*-[a-zA-Z0-9]*)+)$ /post.php?q=$1 last;
+    rewrite ^/(.*?)$ /post.php?q=$1 last;
   }
 
   location = /sitemap.xml {
