--- a/nginx.conf
+++ b/nginx.conf
@@ -6,8 +6,9 @@ server {
   server_name demo.toolsquasar.com www.demo.toolsquasar.com;
 
   location / {
+    rewrite ^/$ /index.php last;
     rewrite ^/(\?.*)$ /index.php$1 last;
-    rewrite ^/(.*?)$ /post.php?q=$1 last;
+    rewrite ^/([0-9a-z-A-Z-]*)$ /post.php?q=$1 last;
   }
 
   location = /sitemap.xml {
